Fix toggle switch knob alignment

--- a/public/css/veto.css
+++ b/public/css/veto.css
@@ -480,16 +480,17 @@ label {
 .checkbox-wrapper-59 .slider:before {
   position: absolute;
   content: "";
-  width: 100%;
-  height: 100%;
+  width: 22px;
+  height: 22px;
+  left: 4px;
+  bottom: 4px;
   background-color: #777;
-  border-radius: 30px;
-  transform: translateX(-56px);
+  border-radius: 50%;
   transition: 0.2s;
 }
 
 .checkbox-wrapper-59 input:checked + .slider:before {
-  transform: translateX(4px);
+  transform: translateX(30px);
   background-color: limeGreen;
 }
 
